apps/ghostfolio/overlays/understairs/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: ghostfolio
  namespace: ghostfolio
spec:
  parentRefs:
    - name: external
      namespace: envoy-gateway-system
  hostnames:
    - ghostfolio.homelab.blacksd.tech
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: ghostfolio
          port: 80
